Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -25,16 +25,18 @@
 <h2>
 <a id="mentors" class="anchor" href="#mentors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mentors</h2>
 
-<p>Laurent Marchal - Center lead
-John Stevenson
-Lynda Russel-Whitaker
-Alexandra Cleland-James
-Aaron Payne
-Andrew Stallard 
-Andy Ormsby
-Darren Smith
-Stefan Dobrowolski
-Peter Chittum</p>
+<ul>
+<li>Laurent Marchal - Center lead</li>
+<li>John Stevenson</li>
+<li>Lynda Russel-Whitaker</li>
+<li>Alexandra Cleland-James</li>
+<li>Aaron Payne</li>
+<li>Andrew Stallard </li>
+<li>Andy Ormsby</li>
+<li>Darren Smith</li>
+<li>Stefan Dobrowolski</li>
+<li>Peter Chittum</li>
+</ul>
 
 <h2>
 <a id="agenda" class="anchor" href="#agenda" aria-hidden="true"><span class="octicon octicon-link"></span></a>Agenda</h2>
