A smaller mess of updates (bad commit example)

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
     </section>
 
     <section class="main-content">
-      <h3>
-<a id="welcome-to-the-salesforce-centre" class="anchor" href="#welcome-to-the-salesforce-centre" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to the Salesforce Centre</h3>
 
+<div class="row">
+<div class="col-sm-6">
 <h2>
 <a id="mentors" class="anchor" href="#mentors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Mentors</h2>
 
@@ -43,6 +43,8 @@
 <li>Peter Chittum</li>
 </ul>
 
+</div>
+<div class="col-sm-6">
 <h2>
 <a id="agenda" class="anchor" href="#agenda" aria-hidden="true"><span class="octicon octicon-link"></span></a>Agenda</h2>
 
@@ -60,6 +62,11 @@
 <li>13.00:  - more ideation, ideas &amp; group formation</li>
 </ul>
 
+</div>
+
+<div class="col-sm-6">
+
+    
 <h2>
 <a id="welcome-videos" class="anchor" href="#festival-of-code-2k15---welcome-videos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Festival of Code 2k15 - Welcome Videos</h2>
 
@@ -70,6 +77,9 @@
 <li><a href="https://www.youtube.com/watch?v=vMrUTvWBNPU">If the WiFi isn't working...</a></li>
 </ul>
 
+</div>
+
+<div class="col-sm-6">
 <h2>
 <a id="finalists-videos" class="anchor" href="#last-years-finalists-videos" aria-hidden="true"><span class="octicon octicon-link"></span></a>Last Years Finalists videos</h2>
 
@@ -90,6 +100,10 @@
 
 <p>There are a whole range of videos on the <a href="https://www.youtube.com/channel/UCm6g92PeJeVQIEH8dWdpm3A">Young Rewired State YouTube Channel</a>.</p>
 
+</div>
+
+<div class="col-sm-6">
+    
 <h2>
 <a id="opendata" class="anchor" href="#open-data" aria-hidden="true"><span class="octicon octicon-link"></span></a>Open Data</h2>
 
@@ -104,6 +118,27 @@
 </ul>
 
 <p>You can of course use any OpenData you want to as part of your project.</p>
+
+</div>
+
+<div class="col-sm-6">
+
+<h2>
+<a id="winning-categories" class="anchor" href="#winning-categories" aria-hidden="true"><span class="octicon octicon-link"></span></a>Winning Categories</h2>
+
+<ul>
+<li>Best example of code - really awesome code</li>
+<li>Best example of design - intuitive, beautiful, interactive &amp; works</li>
+<li>Code a better country - a civic tech hack, something for the benefit of your family, friends, community or country</li>
+<li>Should Exist - something that everyone would use if it existed</li>
+<li>Best in show - all of the above</li>
+<li>Peoples choice award - anyone can vote</li>
+</ul>
+
+<p>Make sure your hack has not been done before (YRS hack pages, Google)</p>
+
+</div>
+
 
 <!--
 <h3>
@@ -120,6 +155,8 @@
 </ul>
 
 -->
+
+</div> <!-- End of rows -->
 
 <h2>
 <a id="twitter" class="anchor" href="#social-media" aria-hidden="true"><span class="octicon octicon-link"></span></a>Social Media</h2>
@@ -194,21 +231,7 @@
 <h2>
 <a id="tips" class="anchor" href="#tips" aria-hidden="true"><span class="octicon octicon-link"></span></a>Tips</h2>
 
-<ul>
-<li>Make sure your hack has not been done before (YRS hack pages, Google)</li>
-</ul>
 
-<h2>
-<a id="winning-categories" class="anchor" href="#winning-categories" aria-hidden="true"><span class="octicon octicon-link"></span></a>Winning Categories</h2>
-
-<ul>
-<li>Best example of code - really awesome code</li>
-<li>Best example of design - intuitive, beautiful, interactive &amp; works</li>
-<li>Code a better country - a civic tech hack, something for the benefit of your family, friends, community or country</li>
-<li>Should Exist - something that everyone would use if it existed</li>
-<li>Best in show - all of the above</li>
-<li>Peoples choice award - anyone can vote</li>
-</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/salesforce-yrs-festivalofcode/salesforce-yrs-festivalofcode">Salesforce YRS Festival of Code</a> is maintained by <a href="https://github.com/salesforce-yrs-festivalofcode">salesforce-yrs-festivalofcode</a>.</span>
