added link to FoC2014 hacks

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <li>Peoples choice award - anyone can vote</li>
 </ul>
 
-<p>Make sure your hack has not been done before (YRS hack pages, Google)</p>
+<p>Make sure your hack has not been done before, so take a look at the <a href="http://hacks.youngrewiredstate.org/events/FOC2014">YRS hack pages</a> or Google</p>
 
 </div>
 
